# matrix

./: CMakeLists.txt  Doxyfile  Jenkinsfile.groovy  Makefile.am  README.md  autogen.sh  configure.ac  cppcheck.sh
contrib/: CMakeLists.txt  FileDataSink.cc  FileDataSink.h  FileDataSource.cc  FileDataSource.h  GRTestComponent.cc  GRTestComponent.h
doc/: InterfaceIdeas.odp  MatrixPresentation.odp  README.INSTALL  README.auto  Specifications.txt
examples/: Makefile.am  hello_world.cc  hello_world.yaml
examples/Helloworld/: CMakeLists.txt  Makefile.am  hello_world.cc  hello_world.yaml  test.yaml
examples/ToyOscilloscope/: README.md  main.cpp  mainwindow.cpp  mainwindow.h  oscilloscope.pro  plot.cpp  plot.h  samplingthread.cpp  samplingthread.h  wheelbox.h
examples/ToyScope/: CMakeLists.txt  ExAccumulator.cc  ExAccumulator.h  ExFFT.cc  ExFFT.h  ExProcessor.cc  ExProcessor.h  ExSignalGenerator.cc  ExSignalGenerator.h  Makefile.am  config.yaml  matrix_grc.grc  toy_scope.cc
include/: FiniteStateMachine.h
keychain/: CMakeLists.txt  Makefile  Makefile.am  cmdparam.cc  cmdparam.h  main.cc
m4/: ax_cxx_compile_stdcxx_14.m4  ax_cxx_compile_stdcxx_17.m4
oscilloscope/: curvedata.cpp  curvedata.h  examples.pri  knob.cpp  knob.h  main.cpp  mainwindow.cpp  mainwindow.h  oscilloscope.pro  plot.cpp  plot.h  samplingthread.cpp  samplingthread.h  signaldata.cpp  signaldata.h  wheelbox.cpp  wheelbox.h
python/: architect.py  keymaster.py
slogger/: CMakeLists.txt  FITSLogger.cc  FITSLogger.h  Makefile.am  slogger.cc
src/: Architect.cc  Architect.h  CMakeLists.txt  Component.cc  Component.h  Controller.cc  Controller.h  DataInterface.cc  DataInterface.h  DataSink.cc  DataSink.h  DataSource.h  FiniteStateMachine.cc  FiniteStateMachine.h  GenericDataConsumer.cc  GenericDataConsumer.h  Keymaster.cc  Keymaster.h  Makefile.am  Mutex.cc  Mutex.h  NANutils.cc  NANutils.h  Publisher.cc  Publisher.h  RTDataInterface.cc  RTDataInterface.h  Semaphore.cc  Semaphore.h  SharedObjectRegistry.cc  TCondition.h  TestDataGenerator.cc  TestDataGenerator.h  Thread.cc  Thread.h  Time.cc  Time.h  ZMQContext.cc  ZMQContext.h  ZMQDataInterface.cc  (+18 more)
src/matrix/: Architect.h  Component.h  DataInterface.h  DataSink.h  DataSource.h  FiniteStateMachine.h  GenericDataConsumer.h  GnuradioDataSource.h  Keymaster.h  Mutex.h  NANutils.h  Publisher.h  RTDataInterface.h  ResourceLock.h  ResourceManager.h  Semaphore.h  SharedObjectRegistry.h  TCondition.h  TestDataGenerator.h  Thread.h  ThreadLock.h  Time.h  ZMQContext.h  ZMQDataInterface.h  fixed_buffer.h  log_t.h  make_path.h  masterdoc.h  matrix_util.h  netUtils.h  string_format.h  tsemfifo.h  zmq_util.h
test/: Makefile  main.cc  test.yaml
unit_tests/: ArchitectTest.cc  ArchitectTest.h  CMakeLists.txt  ControllerTest.cc  ControllerTest.h  DataInterfaceTest.cc  DataInterfaceTest.h  Makefile.am  ResourceLockTest.cc  ResourceLockTest.h  StateTransitionTest.cc  StateTransitionTest.h  TSemfifoTest.cc  TSemfifoTest.h  TimeTest.cc  TimeTest.h  TransportTest.cc  TransportTest.h  hello_world.yaml  keymaster_test.cc  keymaster_test.h  log_t_test.cc  log_t_test.h  matrix_unittest.cc  publisher_test.cc  publisher_test.h  test.yaml  utility_test.cc  utility_test.h
